--- a/package.json
+++ b/package.json
@@ -11,6 +11,13 @@
     "express": "~4.16.1",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
-    "morgan": "~1.9.1"
+    "mongoose": "^5.13.15",
+    "morgan": "~1.9.1",
+    "nodemon": "^2.0.15",
+    "readline": "~1.3.0"
+  },
+  "devDependencies": {
+    "hbs": "^4.2.0",
+    "seedgoose": "^2.0.2"
   }
 }
