--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "mongoose": "^5.13.15",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.20",
-    "readline": "~1.3.0"
+    "readline": "~1.3.0",
+    "request": "^2.88.2"
   },
   "devDependencies": {
     "hbs": "^4.2.0",
