--- a/app_admin/package.json
+++ b/app_admin/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-browser-dynamic": "^14.2.4",
     "@angular/router": "^14.2.4",
     "core-js": "^3.25.5",
+    "passport-local": "^1.0.0",
+    "password": "^0.1.1",
     "rxjs": "~7.5.7",
     "zone.js": "~0.11.8"
   },
