--- a/package.json
+++ b/package.json
@@ -8,13 +8,19 @@
   "dependencies": {
     "bootstrap": "^5.2.2",
     "cookie-parser": "~1.4.4",
+    "crypto": "^1.0.1",
     "debug": "~2.6.9",
+    "dotenv": "^16.0.3",
     "express": "~4.16.1",
+    "express-jwt": "^7.7.5",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.13.15",
     "morgan": "~1.9.1",
     "nodemon": "^2.0.20",
+    "passport-local": "^1.0.0",
+    "password": "^0.1.1",
     "readline": "~1.3.0",
     "request": "^2.88.2"
   },
