--- a/package.json
+++ b/package.json
@@ -6,19 +6,19 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
-    "bootstrap": "^5.2.2",
     "cookie-parser": "~1.4.4",
     "crypto": "^1.0.1",
     "debug": "~2.6.9",
-    "dotenv": "^16.0.3",
+    "dotenv": "^16.0.0",
     "express": "~4.16.1",
-    "express-jwt": "^7.7.5",
+    "express-jwt": "^6.1.0",
     "hbs": "^4.2.0",
     "http-errors": "~1.6.3",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.13.15",
+    "mongoose": "^5.9.2",
     "morgan": "~1.9.1",
-    "nodemon": "^2.0.20",
+    "nodemon": "^2.0.15",
+    "passport": "^0.5.2",
     "passport-local": "^1.0.0",
     "password": "^0.1.1",
     "readline": "~1.3.0",
